--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,6 @@
     <title>My Home Page</title>
   </head>
   <body>
-    <h1>Welcome to My Home Page</h1>
+    <h1>Hello, Welcome to My Home Page</h1>
   </body>
 </html>
