--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>Hello, Welcome to My Home Page</h1>
-    <h2>This is a test page. Welcome to MITB Cloud module!!</h2>
+    <h2>This is a test page. Welcome to MITB Cloud module!</h2>
   </body>
 </html>
